# memcached-protocal

./: Cargo.toml
src/: byte_utils.rs  error.rs  lib.rs
src/command/: command.rs  deletion_command.rs  mod.rs  retrieval_command.rs  store_command.rs
src/response/: deletion_response.rs  mod.rs  response.rs  retrieval_response.rs  stats_response.rs  store_response.rs
tests/: lib.rs
tests/command/: mod.rs  test_command.rs  test_deletion_command.rs  test_retrieval_command.rs  test_store_command.rs
